// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Group should render correctly 1`] = `
<div>
  <div
    class="jsx-1595250786 group "
  >
    <label
      class="jsx-1750119187 "
    >
      <svg
        class="jsx-3742322138"
        fill="none"
        viewBox="0 0 12 12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="jsx-3742322138"
          d="M8.5 0.5H3.5C1.84315 0.5 0.5 1.84315 0.5 3.5V8.5C0.5 10.1569 1.84315 11.5 3.5 11.5H8.5C10.1569 11.5 11.5 10.1569 11.5 8.5V3.5C11.5 1.84315 10.1569 0.5 8.5 0.5Z"
          stroke="#666"
        />
      </svg>
      <input
        class="jsx-1750119187 "
        type="checkbox"
      />
      <span
        class="jsx-1750119187 text"
      >
        Sydney
      </span>
    </label>
  </div>
</div>
`;

exports[`Checkbox should render correctly 1`] = `
<div>
  <label
    class="jsx-1750119187 "
  >
    <svg
      class="jsx-3742322138"
      fill="none"
      viewBox="0 0 12 12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="jsx-3742322138"
        d="M8.5 0.5H3.5C1.84315 0.5 0.5 1.84315 0.5 3.5V8.5C0.5 10.1569 1.84315 11.5 3.5 11.5H8.5C10.1569 11.5 11.5 10.1569 11.5 8.5V3.5C11.5 1.84315 10.1569 0.5 8.5 0.5Z"
        stroke="#666"
      />
    </svg>
    <input
      class="jsx-1750119187 "
      type="checkbox"
    />
    <span
      class="jsx-1750119187 text"
    >
      Sydney
    </span>
  </label>
</div>
`;
